--- a/package.json
+++ b/package.json
@@ -44,14 +44,16 @@
     "test": "npm run test:unit && npm run test:integration",
     "test:integration": "tasegir test --target node --files ./test/integration/**/*.spec.ts --files ./test/integration/**/**/*.spec.ts",
     "test:unit": "tasegir test --target node --files ./test/unit/*.spec.ts --files ./test/unit/**/*.spec.ts --files ./test/unit/**/**/*.spec.ts",
-    "start": "tasegir run --watch ./src/index.ts"
+    "start": "tasegir run ./bin/run -- "
   },
   "dependencies": {
+    "@ethersphere/bee-js": "AuHau/bee-js#feat/collections-support",
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/errors": "^1.3.4",
     "@oclif/parser": "^3.8.5",
-    "@oclif/plugin-help": "^3.2.0"
+    "@oclif/plugin-help": "^3.2.0",
+    "cli-ux": "^5.5.1"
   },
   "devDependencies": {
     "@fluffy-spoon/substitute": "^1.145.0",
